--- a/graphql-api/package.json
+++ b/graphql-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "graphql-api",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
@@ -8,7 +8,7 @@
     "build": "tsc -p .",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts"
   },
-  "author": "",
+  "author": "https://twitter.com/bouwe",
   "license": "ISC",
   "dependencies": {
     "apollo-datasource": "^0.7.3",
